# Self-Healing-Infrastructure-Monitor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_project.ps1
config/: adk_config.yaml.example  mcp_config.yaml.example  thresholds.yaml.example
src/adk_agents/: agent_factory.py  analysis_agent.py  diagnostic_agent.py  remediation_agent.py
src/adk_agents/prompts/: analysis.txt  diagnostic.txt  remediation.txt
src/mcp_server/: config.py  server.py
src/mcp_server/resources/: infrastructure.py  logs.py  metrics.py
src/mcp_server/tools/: diagnostics.py  remediation.py  rollback.py
